fix ie10 placeholder bug which adds focus and opens autocomplete by default. Added z-index for autocomplete to work on i.e. removed some ui-autocomplete fucntionality for iphone and iPad to make autocomplete selection work with the first click

--- a/themes/finna/less/bootstrap/finna/organisation-page.less
+++ b/themes/finna/less/bootstrap/finna/organisation-page.less
@@ -668,7 +668,7 @@ section.main.template-dir-content.template-name-content {
     padding: 1px;
     max-height: 286px;
     overflow-y: auto;
-    z-index: 2;
+    z-index: 2000;
     position: absolute;
     &::-webkit-scrollbar {
         background: transparent;
